--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,10 @@ body{
 
 
 .parent {
+    height: 95%;
     display: grid;
     grid-template-columns: 200px 1fr;
-    grid-template-rows: 258% 180px;
+    grid-template-rows: calc(100% - 220px) 210px;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
 }
@@ -61,8 +62,6 @@ tr:nth-child(even) {
 
 #RodeKaart1{
     position: absolute;
-    top: 345px;
-    left: 718px;
     width: 100px;
     height: 150px;
     background-color: red;
@@ -71,10 +70,8 @@ tr:nth-child(even) {
     border: black 1px solid;
 }
 
-#RodeKaart2{
+#RodeKaart2{ 
     position: absolute;
-    top: 345px;
-    left: 610px;
     width: 100px;
     height: 150px;
     background-color: red;
@@ -85,8 +82,6 @@ tr:nth-child(even) {
 
 #RodeKaart3{
     position: absolute;
-    top: 345px;
-    left: 826px;
     width: 100px;
     height: 150px;
     background-color: red;
@@ -98,7 +93,7 @@ tr:nth-child(even) {
 #witteKaart1{
     position: absolute;
     top: 50px;
-    left: 772px;
+    left: calc(50% - 100px);
     width: 100px;
     height: 150px;
     border-radius: 10px;
@@ -109,7 +104,7 @@ tr:nth-child(even) {
 #witteKaart2{
     position: absolute;
     top: 50px;
-    left: 662px;
+    left: calc(50%);
     width: 100px;
     height: 150px;
     border-radius: 10px;
@@ -120,7 +115,7 @@ tr:nth-child(even) {
 #witteKaart3{
     position: absolute;
     top: 50px;
-    left: 326px;
+    left: 960px;
     width: 100px;
     height: 150px;
     border-radius: 10px;
@@ -131,7 +126,7 @@ tr:nth-child(even) {
 #witteKaart4{
     position: absolute;
     top: 50px;
-    left: 436px;
+    left: 960px;
     width: 100px;
     height: 150px;
     border-radius: 10px;
@@ -142,7 +137,7 @@ tr:nth-child(even) {
 #witteKaart5{
     position: absolute;
     top: 50px;
-    left: 1000px;
+    left: 960px;
     width: 100px;
     height: 150px;
     border-radius: 10px;
@@ -153,7 +148,7 @@ tr:nth-child(even) {
 #witteKaart6{
     position: absolute;
     top: 50px;
-    left: 1110px;
+    left: 960px;
     width: 100px;
     height: 150px;
     border-radius: 10px;
