--- a/css/style.css
+++ b/css/style.css
@@ -93,25 +93,22 @@ tr:nth-child(even) {
     color: red;
     border: black 1px solid;
     text-align: center;
+    bottom: 230px;
 }
 
 #w1{
-    bottom: calc(240px);
     left: calc(50% - 215px);
 }
 
 #w2{
-    bottom: calc(240px);
     left: calc(50% - 105px);
 }
 
 #w3{
-    bottom: calc(240px);
     left: calc(50% + 5px);
 }
 
 #w4{
-    bottom: calc(240px);
     left: calc(50% + 115px);
 }
 
@@ -139,4 +136,29 @@ tr:nth-child(even) {
     position: absolute;
     bottom: calc(275px);
     left: calc(50% + 165px);
+}
+
+.GespeeldeKaart
+{
+    position: absolute;
+    top: 35px;
+    width: 100px;
+    height: 150px;
+    border-radius: 10px;
+    color: red;
+    border: black 1px solid;
+    text-align: center;
+}
+
+.GespeeldeKaartRood
+{
+    position: absolute;
+    top: 191px;
+    width: 100px;
+    height: 150px;
+    background-color: red;
+    border-radius: 10px;
+    color: white;
+    border: black 1px solid;
+    text-align: center;
 }
